--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.1",
     "d3": "^4.11.0",
     "d3-context-menu": "^0.1.2",
+    "gulp": "^3.8.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
@@ -38,7 +39,7 @@
     "ng2-atomspace-visualizer": "^1.3.7",
     "ng2-toastr": "^4.1.2",
     "ngx-uploader": "^4.0.0",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.2",
     "semantic-ui": "^2.2.13",
     "zone.js": "^0.8.18"
   },
